syntax = "proto3";
package ncs.user.ban;
option go_package = "grpc";

// Base

message Info {
    int64 id = 1;
    int64 uid = 2;
    int64 create_time = 3;
    int64 expire_time = 4;
    int32 type = 5;
    int64 server_id = 6;
    int64 mod_id = 7;
    int64 game_id = 8;
    string reason = 9;
}

// Message

message InfoReq {
    int64 uid = 1;
}

message InfoResp {
    Info info = 1;
}

message AddReq {
    Info info = 1;
}

message AddResp {
}

message RemoveReq {
    int64 id = 1;
}

message RemoveResp {
}

service Ban {
    rpc Info (InfoReq) returns (InfoResp);
    rpc Add (AddReq) returns (AddResp);
    rpc Remove (RemoveReq) returns (RemoveResp);
}